fixed issue with footer content alignment

--- a/src/app/Components/footer/footer.component.scss
+++ b/src/app/Components/footer/footer.component.scss
@@ -123,8 +123,7 @@ section{
     .footer__col{
         display:flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
+        align-items: flex-start;
     }
 
     .footer__sunken-section{
